removal of old commented code in previously modified files